@@ -1,3 +1,6 @@
+CHANGES: 21-11-25/...-10/.../2021
+- Updated help section
+
 CHANGES: 21-04-03-03-2021
 - Added function that edit the 'project.json' by using CLI tools
 - Models package refactored - created files:
